# clanker-wiki-harness

./: .gitignore  README.md  pyproject.toml
.hermes/plans/: 2026-06-27_003732-clanker-wiki-harness-buildout.md
scripts/: verify.py
src/clanker_wiki_harness/: __init__.py  apply_staging.py  cli.py  diff_report.py  extract_contract.py  ingest_local.py  model_json.py  model_plan.py  paths.py  staging.py  validators.py
tests/: __init__.py  test_apply_staging.py  test_cli.py  test_extract_contract.py  test_ingest_local.py  test_model_json.py  test_model_plan.py  test_staging_and_diff.py  test_validators.py
